Adjusted print font sizes, were in some cases overly large.  Added page-break settings to avoid page breaks inside tables and references.  Tweaked the styling of <aside> to be more aligned with the W3C description of the element.  - Legacy-Id: 3372

--- a/cli/xml2rfc/data/xml2rfc.css
+++ b/cli/xml2rfc/data/xml2rfc.css
@@ -979,3 +979,34 @@ dl.olPercent > dd {
   margin: 0 0 0.25em 0;
   min-height: initial;
 }
+/* Give aside some styling to set it apart */
+aside {
+  border-left: 1px solid #ddd;
+  margin: 1em 0 1em 2em;
+  padding: 0.2em 2em;
+}
+aside > dl,
+aside > ol,
+aside > ul,
+aside > table,
+aside > p {
+  margin-bottom: 0;
+}
+/* Additional page break settings */
+@media print {
+  table, .refInstance {
+    page-break-inside: avoid;
+  }
+  figcaption, table caption {
+    page-break-before: avoid;
+  }
+}
+/* Font size adjustments for print */
+@media print {
+  body  { font-size: 10pt;      line-height: normal; max-width: 96%; }
+  h1    { font-size: 1.72em;    padding-top: 1.5em; } /* 1*1.2*1.2*1.2 */
+  h2    { font-size: 1.44em;    padding-top: 1.5em; } /* 1*1.2*1.2 */
+  h3    { font-size: 1.2em;     padding-top: 1.5em; } /* 1*1.2 */
+  h4    { font-size: 1em;       padding-top: 1.5em; }
+  h5, h6 { font-size: 1em;      margin: initial; padding: 0.5em 0 0.3em; }
+}
